# Kroissant

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/onboarding/: page.tsx
app/parent-dashboard/: page.tsx
app/video/[id]/: page.tsx
data/: kroissant.sqlite
data/temp/: kroissant.sqlite
hooks/: useFilters.ts
scripts/: categorize_tmdb_series.py  liste_dessins_animes.txt  tmdb_categories.example.json
scripts/data/: kroissant.sqlite
src/: app_state.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  utils.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
src/components/feature/: VideoCard.tsx
src/components/ui/: Button.tsx
src/data/: videos.ts
src/handlers/: auth.rs  content.rs  home.rs  library.rs  mod.rs  registration.rs
src/models/: auth_mode.rs  benefit.rs  claims.rs  content.rs  mod.rs  query.rs  registration.rs  tagged_series.rs  user.rs
src/repositories/: content.rs  email_verification_repository.rs  mod.rs  user.rs
src/routes/: mod.rs
src/services/: auth.rs  content.rs  email.rs  mod.rs
src/views/: account.rs  auth.rs  components.rs  content_detail.rs  error.rs  home.rs  layout.rs  legal.rs  library.rs  mod.rs  science.rs  utils.rs
src/views/email/: mod.rs  verification.rs  verification_plain.rs
src/views/registration/: mod.rs  step_email.rs  step_email_sent.rs  step_entry.rs  step_password.rs  step_profile.rs  step_success.rs
static/: app.css  app.js  manifest.json  pwa-install.js  sw.js
tests/: auth_tests.rs  content_tests.rs  repository_tests.rs
tests/common/: mod.rs
types/: index.ts
