[package]
name = "kroissant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1.89"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
html-escape = "0.2"
jsonwebtoken = "9"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
